Fixing portal responsive overflow issues and minor responsive auth form improvements

--- a/client/src/app/features/portal/components/auth-form/auth-form.component.scss
+++ b/client/src/app/features/portal/components/auth-form/auth-form.component.scss
@@ -28,7 +28,7 @@
 }
 @media only screen and (max-width: 600px) {
   .auth-container {
-    margin-top: 34em;
+    margin-top: 32em;
     box-shadow: none;
     background: #f0f2f5;
     width: 98vw;
