--- a/client/src/app/features/portal/components/login/login.component.scss
+++ b/client/src/app/features/portal/components/login/login.component.scss
@@ -71,7 +71,7 @@
     height: 100%;
     padding: 0;
     padding-top: 3.5em;
-    padding-bottom: 1em;
+    padding-bottom: 3em;
   }
   #login-form {
     width: 98%;
